; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/ciphers/extr_cipher_aes_ocb_hw.c_cipher_hw_aes_ocb_generic_initkey.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/ciphers/extr_cipher_aes_ocb_hw.c_cipher_hw_aes_ocb_generic_initkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AES_set_encrypt_key = common dso_local global i32 0, align 4
@AES_set_decrypt_key = common dso_local global i32 0, align 4
@AES_encrypt = common dso_local global i32 0, align 4
@AES_decrypt = common dso_local global i32 0, align 4
@HWAES_CAPABLE = common dso_local global i64 0, align 8
@HWAES_decrypt = common dso_local global i32 0, align 4
@HWAES_encrypt = common dso_local global i32 0, align 4
@HWAES_ocb_decrypt = common dso_local global i32* null, align 8
@HWAES_ocb_encrypt = common dso_local global i32* null, align 8
@HWAES_set_decrypt_key = common dso_local global i32 0, align 4
@HWAES_set_encrypt_key = common dso_local global i32 0, align 4
@VPAES_CAPABLE = common dso_local global i64 0, align 8
@vpaes_decrypt = common dso_local global i32 0, align 4
@vpaes_encrypt = common dso_local global i32 0, align 4
@vpaes_set_decrypt_key = common dso_local global i32 0, align 4
@vpaes_set_encrypt_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64)* @cipher_hw_aes_ocb_generic_initkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cipher_hw_aes_ocb_generic_initkey(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %4, align 8
  store i32* %8, i32** %7, align 8
  %9 = load i32, i32* @AES_set_encrypt_key, align 4
  %10 = load i32, i32* @AES_set_decrypt_key, align 4
  %11 = load i32, i32* @AES_encrypt, align 4
  %12 = load i32, i32* @AES_decrypt, align 4
  %13 = call i32 @OCB_SET_KEY_FN(i32 %9, i32 %10, i32 %11, i32 %12, i32* null, i32* null)
  ret i32 1
}

declare dso_local i32 @OCB_SET_KEY_FN(i32, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
